--- a/src/components/ARButton/style.css
+++ b/src/components/ARButton/style.css
@@ -1,56 +1,104 @@
 .container--arbutton {
-    padding: 20px;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 999;
+  box-sizing: border-box;
+  position: relative;
+  cursor: pointer;
+  border: unset;
+  background-color: transparent;
+  border-radius: 50%;
+  padding: 20px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 999;
+}
+.openIosAlert {
+  cursor: default;
+  position: absolute;
+  top: 100%;
+  left: 20px;
+  max-width: 40vw;
+  min-width: 25vw;
+  width: fit-content;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 8px;
+  box-sizing: border-box;
+}
+.closeSvg {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: fit-content;
+  height: fit-content;
+  border: unset;
+  background-color: transparent;
+}
+.openIosAlert h3 {
+  margin-top: unset;
 }
 .link--arbutton {
-    display: flex;
-    transition: all .2s ease-out;
-    flex-direction: column;
-    width: 88px;
-    height: 88px;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    border-radius: 100px;
-    background-color: #f1f1f1;
-    text-decoration: none;
-    cursor: pointer;
-    box-shadow: -6px -6px 14px rgba(255, 255, 255, .7),
-                -6px -6px 10px rgba(255, 255, 255, .5),
-                6px 6px 8px rgba(255, 255, 255, .075),
-                6px 6px 10px rgba(0, 0, 0, .15);
+  border: unset;
+  display: flex;
+  transition: all 0.2s ease-out;
+  flex-direction: column;
+  width: 88px;
+  height: 88px;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  border-radius: 100px;
+  background-color: #f1f1f1;
+  text-decoration: none;
+  cursor: pointer;
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
 }
 .link--arbutton:hover {
-  box-shadow: -2px -2px 6px rgba(255, 255, 255, .6),
-              -2px -2px 4px rgba(255, 255, 255, .4),
-              2px 2px 2px rgba(255, 255, 255, .05),
-              2px 2px 4px rgba(0, 0, 0, .1);
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
+    -2px -2px 4px rgba(255, 255, 255, 0.4),
+    2px 2px 2px rgba(255, 255, 255, 0.05), 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .link--arbutton:active {
-  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, .7),
-              inset -2px -2px 4px rgba(255, 255, 255, .5),
-              inset 2px 2px 2px rgba(255, 255, 255, .075),
-              inset 2px 2px 4px rgba(0, 0, 0, .15);
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.7),
+    inset -2px -2px 4px rgba(255, 255, 255, 0.5),
+    inset 2px 2px 2px rgba(255, 255, 255, 0.075),
+    inset 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
-@media screen and (max-width: 1024px)  {
-    .container--arbutton {
-        padding: 10px;
-    }
-    .link--arbutton {
-        width: 44px;
-        height: 44px;
-    }
-    .arbutton--img {
-        width: 32px;
-        height: 32px;
-    }
+@media screen and (max-width: 1024px) {
+  .container--arbutton {
+    padding: 10px;
+  }
+  .link--arbutton {
+    width: 44px;
+    height: 44px;
+  }
+  .arbutton--img {
+    width: 32px;
+    height: 32px;
+  }
+  .openIosAlert {
+    padding: 20px;
+    min-width: 50vw;
+    left: 10px;
+  }
 }
 
-@media screen and (min-width: 1281px)  {
-    .container--arbutton {
-        display: none;
-    }
+@media screen and (min-width: 1281px) {
+  .container--arbutton {
+    /* display: none; */
+  }
+
+  .arbutton--img {
+    width: 32px;
+    height: 32px;
+  }
+  .openIosAlert {
+    left: 20px;
+  }
 }
