--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,5 @@
 .canvas--container {
-    width: 100vw;
-    height: 100vh;
-    background-color: #DDDDDD;
+  width: 100vw;
+  height: 100vh;
+  background-color: #dddddd;
 }
