--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+  background-color: #000000;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
