--- a/src/components/ARButton/style.css
+++ b/src/components/ARButton/style.css
@@ -52,6 +52,9 @@
   opacity: 60%;
 }
 .link--arbutton {
+  position: absolute;
+  top: 10px;
+  left: 10px;
   border: unset;
   display: flex;
   transition: all 0.2s ease-out;
@@ -115,4 +118,8 @@
   .openIosAlert span {
     font-size: 4vw;
   }
+}
+
+.testing123 {
+  display: flex;
 }
