--- a/src/components/ARButton/style.css
+++ b/src/components/ARButton/style.css
@@ -14,7 +14,7 @@
 .openIosAlert {
   cursor: default;
   position: absolute;
-  top: 100%;
+  bottom: 20%;
   left: 20px;
   max-width: 40vw;
   min-width: 25vw;
