--- a/src/components/Loader/style.css
+++ b/src/components/Loader/style.css
@@ -19,7 +19,7 @@
 
 .container--loader .progressBar {
   position: absolute;
-  top: 30%;
+  bottom: 30%;
   left: 0px;
   right: 0px;
   margin: 0 auto;
