--- a/src/components/ARButton/style.css
+++ b/src/components/ARButton/style.css
@@ -72,7 +72,7 @@
   align-items: center;
   gap: 5px;
   border-radius: 100px;
-  background-color: #f1f1f1;
+  background-color: #4254F3;
   text-decoration: none;
   cursor: pointer;
   box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
@@ -99,7 +99,7 @@
   align-items: center;
   /* gap: 5px; */
   border-radius: 100px;
-  background-color: #f1f1f1;
+  background-color: #4254F3;
   text-decoration: none;
   cursor: pointer;
   box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
@@ -109,6 +109,7 @@
 .linkButtonName {
   text-decoration: none;
   margin: 0px 8px 0px 10px;
+  color: white;
   font-weight: 400;
   font-size: 16px;
   line-height: 17.92px;
