--- a/src/components/Loader/style.css
+++ b/src/components/Loader/style.css
@@ -5,7 +5,7 @@
 }
 
 .container--loader svg {
-  max-height: 200px;
+  height: 100px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -19,7 +19,7 @@
 }
 
 .bfLoader {
-  max-height: 150px !important;
+  height: 100px !important;
 }
 
 .container--loader .progressBar {
