--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -75,3 +75,16 @@
     font-size: 4vw;
   }
 }
+
+.closeSvg:hover {
+  opacity: 1;
+}
+
+.closeSvg:active {
+  transform: translateY(1px);
+}
+
+.closeSvg:focus-visible {
+  outline: 2px solid #4254F3;
+  outline-offset: 2px;
+}
