--- a/src/pages/androidViewer/AVStyle.module.css
+++ b/src/pages/androidViewer/AVStyle.module.css
@@ -18,44 +18,29 @@
   background-color: #dddddd;
 }
 
-.modelViewer model-viewer > #ar-button {
-  /* background-image: url(../../assets/ic_view_in_ar_new_googblue_48dp.png); */
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  background-position: 12px 50%;
-  background-color: #fff;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-  bottom: 132px;
-  padding: 0px 16px 0px 40px;
-  font-family: Roboto Regular, Helvetica Neue, sans-serif;
-  font-size: 14px;
-  color: #4285f4;
-  height: 36px;
-  line-height: 36px;
+.errorState {
+  margin: auto;
+  max-width: 560px;
+  width: calc(100vw - 40px);
+  padding: 24px;
   border-radius: 18px;
-  border: 1px solid #dadce0;
+  background-color: #f1f1f1;
+  font-family: "PT Mono", monospace;
+  color: #222;
+  text-align: center;
+  box-sizing: border-box;
 }
 
-#ar-button {
-  /* background-image: url(../../assets/ic_view_in_ar_new_googblue_48dp.png); */
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  background-position: 12px 50%;
-  background-color: #fff;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-  bottom: 132px;
-  padding: 0px 16px 0px 40px;
-  font-family: Roboto Regular, Helvetica Neue, sans-serif;
-  font-size: 14px;
-  color: #4285f4;
-  height: 36px;
-  line-height: 36px;
-  border-radius: 18px;
-  border: 1px solid #dadce0;
+.errorState p {
+  margin: 0 0 12px 0;
+}
+
+.retryButton {
+  border: 0;
+  border-radius: 100px;
+  background-color: #4254f3;
+  color: #fff;
+  padding: 10px 18px;
+  font-family: "PT Mono", monospace;
+  cursor: pointer;
 }
